fix: show partial words when truncating

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,6 +34,7 @@ html {
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;  
   overflow: hidden;
+  word-break: break-all;
 }
 
 .place-center {
